frontend/static/css/style.css
body {
	margin: 0;
	font-family: "K2D";
	color: white;
	/* Keep this line below as a backup in case background-image fails. */
	background: linear-gradient(to bottom, #342153 0%, #D77B26 100%);
	background-image: url("/static/png/hmix-bg-300.png"), linear-gradient(to bottom, #342153 0%, #D77B26 100%);
	background-position: right bottom;
	background-repeat: no-repeat;
	height: 100vh;
}



body.auth {
	margin: 0;
	font-family: "K2D";
	color: white;
	/* Keep this line below as a backup in case background-image fails. */
	background: linear-gradient(to bottom, #342153 0%, #D77B26 100%);
	background-repeat: no-repeat;
}


input[type="text"] {
	background-color: #EDEFF280;
	padding: 8px 1em;
	font-size: 24px;
	border: none;
	border-radius: 12px;
	color: white;
}

input[type="submit"] {
	background-color: #D77B2691;
	font-size: 16px;
	padding: 12px 32px;
	border: none;
	color: white;
	border-radius: 10px;
}

/* Absolutely center something both vertically and horizontally. */
.absolute-center {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translateX(-50%) translateY(-50%);
}

/* Two columns are used a lot, so these classes help with that. */
.row:after {
	content: "";
	display: table;
	clear: both;
}
.column {
	float: left;
	width: 50%;
}

/* Common */

.main-container {
	margin-top: 48px;
	width: 75%;
	display: flex;
	flex-direction: column;
}

.main-banner {
	color: #EEDEFDD9;
	background-color: #342153;
	width: 100%;
	border-radius: 20px;
	margin-bottom: 16px;
	box-shadow: 5px 5px 5px #241930;
}

.main-banner h1 {
	padding-top: 16px;
}

/* Styling for "round-row" tables. */
.rounded-table {
	color: #EEDEFDD9;
	width: 100%;
	background-color: #9A4922;
	border-spacing: 0px 0px;
	border-radius: 20px;
}
.rounded-table tbody:first-child th {
	background-color: #550C14;
	font-size: 18px;
	padding: 4px;
}
.rounded-table tbody tr th:first-child,
.rounded-table tbody tr td:first-child
{
	border-top-left-radius: 20px;
	border-bottom-left-radius: 20px;
}
.rounded-table tbody tr th:last-child,
.rounded-table tbody tr td:last-child
{
	border-top-right-radius: 20px;
	border-bottom-right-radius: 20px;
}
.rounded-table tbody tr td {
	background-color: #5B1C32CC;
	font-size: 20px;
	text-align: center;
}
.table-spacer {
	height: 2px;
}


/* End Common */

/* Login and Registration */

#login-form, #registration-form {
	background-color: #D77B2633;
	border-radius: 20px;
	padding: 32px;
}

#registration-form input[type="text"] {
	margin: 8px;
}

/* End Login and Registration */

/* Home */

#home-countdown, #home-countdown-text {
	background-color: #D77B2633;
	padding: 12px;
	border-radius: 20px;
	margin-bottom: 16px;
	margin-right: 8px;
	box-shadow: 5px 5px 5px #44290f93;
}

#home-announcements {
	background-color: #D77B2633;
	padding: 12px;
	border-radius: 20px;
	margin-left: 8px;
	box-shadow: 5px 5px 5px #44290f93;
}

.announcement {
	background-color: #372358BA;
	padding: 2px 16px;
	text-align: left;
	border-radius: 20px;
}

/* End Home */

/* Punch Card */

#punch-container {
	background-color: #D77B2633;
	width: 100%;
	border-radius: 20px;
	padding: 48px 0px 32px 0px;
}

#punches {
	font-size: 30px;
	width: 90%;
	border-spacing: 0px 10px;
}

#punches tr {
	margin: 16px;
	border-radius: 20px;
}

#punches td {
	background-color: #D77B2691;
	padding: 16px;
}

.punch {
	width: 48px;
}

.punch img {
	width: 48px;
	border-radius: 50%;
}

.punch-spacer {
	width: 4px;
}

.punch-rounded-start {
	border-top-left-radius: 10px; /* Set your desired border radius for the top-left corner */
	border-bottom-left-radius: 10px; /* Set your desired border radius for the bottom-left corner */
  }

  .punch-rounded-end {
	border-top-right-radius: 10px; /* Set your desired border radius for the top-right corner */
	border-bottom-right-radius: 10px; /* Set your desired border radius for the bottom-right corner */
  }

/* End Punch Card */

/* Prizes */

#prizes-points-balance {
	margin-top: 32px;
	text-align: right;
	color: #EEDEFDD9;
}

#points {
	padding: 0px 2em;
}

/* End Prizes */

/* Navbar */

#navbar {
	display: flex;
	align-items: center;
	background-color: #342153;
	width: 100vw;
	height: 88px;
	box-shadow: 5px 5px 5px #241930;
	gap: 1em;
	flex-wrap:nowrap;
}

.navbar-link {
	font-size: 1rem;
	background-color: #D77B2633;
	padding: 1em;
	border-radius: 5px;
	box-shadow: 5px 5px 5px #241930;
	
}

.navbar-link a, .navbar-link a:visited {
	color: white;
	text-decoration: none;
}

#navbar-profile {
	margin-left: auto;
	margin-right: 32px;
}

#navbar-profile a img {
	height: 50px;
}

/* End Navbar */

/*Viewports*/
@media screen and (min-width:300px) and (max-width:880px) {
	body{
		background-image: none;
		background: linear-gradient(to bottom, #342153 0%, #D77B26 100%);
		overflow-x: hidden;
	}
	
	.main-container{
		width: 90%;
		
	}
	/*Navbar*/
	.column {
		float:none;
		width: 100%;
	}
	#navbar{
		gap:.7em;
	}
	.navbar-link{
		font-size: smaller;
		margin-left: 0;
		padding: .7em;
	}
   #navbar-profile a img{
	height: 2em;
   }
   /*END Navbar*/
}
/*End Viewports*/

